# FloorPlanComparer

./: .dockerignore  .gitignore  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_PLAN.md  PLAN.md
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py  worker.py
backend/app/api/: router.py
backend/app/api/routes/: __init__.py  converter.py  enhanced.py  health.py  jobs.py
backend/app/core/: settings.py
backend/app/models/: __init__.py  jobs.py  responses.py
backend/app/modules/dwg_to_pdf/: README.md  __init__.py  converter.py  librecad_converter.py  test_converter.py
backend/app/services/: __init__.py  jobs.py  parsing.py  pdf_comparison.py  reports.py
backend/app/tasks/: __init__.py  converter_tasks.py  enhanced_jobs.py  jobs.py
backend/scripts/: overlay_pdfs.py  process_origin_diff.py
backend/tests/: test_health.py  test_jobs.py
docs/: CHANGELOG.md  devProcess.txt  dev_status.md  dwg_to_pdf_module_summary.md  final_report.md  qcad_community_issues.md  qcad_installation_guide.md  smart_layer_export_agent_plan.md  test_workflow.md  testing_guide.md  部署.txt
frontend/: README.md  check-console.js  check-errors.js  check-errors.ps1  demo.html  fullscreen.html  index.html  package-lock.json  package.json  test-console.html  test-frontend.js  tsconfig.node.json  vite.config.ts
frontend/scripts/: render_diff.tsx
frontend/src/: App.js  App.tsx  SimpleApp.tsx  fullscreen.tsx  main.js  main.tsx  styles.css
frontend/src/components/: DWGConverter.tsx  JobsTable.tsx  (+7 more)
ops/compose/: docker-compose.yml
scripts/: BatchExportPDF.lsp  analyze_dxf_axes.py  autocad_export.py  check_deps.py  convert.bat  convert.py  install_deps.ps1  pdf_diff.py  setup_env.ps1  setup_env.sh  simple_export_test.py  test_autocad_basic.py  test_converter_module.py  test_enhanced.py  test_pdf_diff.py
(+4 files in other folders)
