[tool.poetry]
name = "floorplan-backend"
version = "0.1.0"
description = "Backend service for floor plan comparison"
authors = ["FloorPlanComparer <dev@floorplan.local>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
python-multipart = "^0.0.9"
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.6.0"
black = "^24.8.0"
isort = "^5.13.0"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
