[project]
name = "floorplan-backend"
version = "0.1.0"
description = "Backend service for floor plan comparison"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [
    { name = "FloorPlanComparer", email = "dev@floorplan.local" },
]
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30,<0.31",
    "python-multipart>=0.0.9,<0.1",
    "pydantic>=2.9,<2.13",
    "pydantic-settings>=2.5,<2.12",
    "celery>=5.4,<5.5",
    "redis>=5.0,<6.0",
    "filelock>=3.15,<4.0",
]

[project.optional-dependencies]
cad = [
    "ezdxf>=1.3,<2.0",
    "numpy>=1.26,<3.0",
    "shapely>=2.0,<3.0",
    "rtree>=1.2,<2.0",
]

[tool.setuptools.packages.find]
include = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3,<9.0",
    "httpx>=0.27,<0.29",
    "pytest-asyncio>=0.23,<0.24",
    "ruff>=0.6,<0.7",
    "black>=24.8,<25.0",
    "isort>=5.13,<6.0",
    "mypy>=1.11,<1.13",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
